test/bad/classes/constructor07.px

class A def
    constructor abstract
